@@ -3852,8 +3852,8 @@ public class AssignmentAction extends PagedResourceActionII {
                 // selected category
                 context.put("value_Category", state.getAttribute(NEW_ASSIGNMENT_CATEGORY));
 
+                // Preserve insertion order (matches Gradebook Settings order)
                 List<Long> categoryList = new ArrayList<>(categoryTable.keySet());
-                Collections.sort(categoryList);
                 context.put("categoryKeys", categoryList);
                 context.put("categoryTable", categoryTable);
             } else {
@@ -4136,8 +4136,8 @@ public class AssignmentAction extends PagedResourceActionII {
                 Assignment a = assignment.get();
                 setScoringAgentProperties(context, a, s, true);
 
-                // try to put in grade overrides
-                if (a.getIsGroup()) {
+                // try to put in grade overrides (not applicable when anonymous grading is enabled)
+                if (AssignmentToolUtils.allowGroupOverrides(a, assignmentService)) {
                     context.put("ownerGroupId", s.getGroupId());
                     Map<String, Object> grades = new HashMap<>();
                     for (String userId : users.keySet()) {
@@ -5196,22 +5196,21 @@ public class AssignmentAction extends PagedResourceActionII {
                 context.put("groupsReviewersMap", groupsReviewersMap);
             }
 
-            // try to put in grade overrides
-            if (assignment.getIsGroup()) {
-                Map<String, Object> ugrades = new HashMap<>();
-                Map<String, String> p = assignment.getProperties();
+            // try to put in grade overrides for list context (not when anonymous grading)
+            if (AssignmentToolUtils.allowGroupOverrides(assignment, assignmentService)) {
+                Map<String, Object> userGrades = new HashMap<>();
                 for (SubmitterSubmission ss : userSubmissions) {
                     if (ss != null && ss.getSubmission() != null) {
-                        List<String> users = ss.getSubmission().getSubmitters().stream().map(AssignmentSubmissionSubmitter::getSubmitter).collect(Collectors.toList());
+                        List<String> users = ss.getSubmission().getSubmitters().stream().map(AssignmentSubmissionSubmitter::getSubmitter).toList();
                         for (String user : users) {
                             String agrade = assignmentService.getGradeForSubmitter(ss.getSubmission(), user);
                             if (agrade != null) {
-                                ugrades.put(user, agrade);
+                                userGrades.put(user, agrade);
                             }
                         }
                     }
                 }
-                context.put("value_grades", ugrades);
+                context.put("value_grades", userGrades);
 
             }
 
@@ -11563,13 +11562,13 @@ public class AssignmentAction extends PagedResourceActionII {
                 String grade = assignmentService.getGradeDisplay(s.getGrade(), a.getTypeOfGrade(), a.getScaleFactor());
                 state.setAttribute(GRADE_SUBMISSION_GRADE, grade);
 
-                // populate grade overrides if they exist
-                if (a.getIsGroup()) {
-	                for (AssignmentSubmissionSubmitter submitter : s.getSubmitters()) {
-	                    String gradeOverride = assignmentService.getGradeForSubmitter(s, submitter.getSubmitter());
-	                    if (!StringUtils.equals(grade, gradeOverride)) {
-	                        state.setAttribute(GRADE_SUBMISSION_GRADE + "_" + submitter.getSubmitter(), gradeOverride);
-	                    }
+                // populate grade overrides if they exist (skip when anonymous grading)
+                if (AssignmentToolUtils.allowGroupOverrides(a, assignmentService)) {
+                        for (AssignmentSubmissionSubmitter submitter : s.getSubmitters()) {
+                            String gradeOverride = assignmentService.getGradeForSubmitter(s, submitter.getSubmitter());
+                            if (!StringUtils.equals(grade, gradeOverride)) {
+                                state.setAttribute(GRADE_SUBMISSION_GRADE + "_" + submitter.getSubmitter(), gradeOverride);
+                            }
 	                }
                 }
 
@@ -12565,8 +12564,8 @@ public class AssignmentAction extends PagedResourceActionII {
                     addAlert(state, rb.getString("plespethe2"));
                 }
 
-                // check for grade overrides
-                if (a.getIsGroup()) {
+                // check for grade overrides (not applicable when anonymous grading)
+                if (AssignmentToolUtils.allowGroupOverrides(a, assignmentService)) {
                     HashMap<String, String> scaledValues = new HashMap<String, String>();
                     Set<AssignmentSubmissionSubmitter> submitters = submission.getSubmitters();
                     for (AssignmentSubmissionSubmitter submitter : submitters) {
@@ -13434,13 +13433,20 @@ public class AssignmentAction extends PagedResourceActionII {
      * @return
      */
     private Map<Long, String> getCategoryTable() {
-        Map<Long, String> catTable = new HashMap<>();
+        // Preserve ordering: first "Unassigned", then categories in the Gradebook Settings order
+        Map<Long, String> catTable = new LinkedHashMap<>();
         String gradebookUid = toolManager.getCurrentPlacement().getContext();
 
         if (canGrade() && gradingService.isCategoriesEnabled(gradebookUid)) {
-            catTable = gradingService.getCategoryDefinitions(gradebookUid, gradebookUid).stream()
-                .collect(Collectors.toMap(c -> c.getId(), c -> c.getName()));
+            // Unassigned option (-1) shown first
             catTable.put(-1L, rb.getString("grading.unassigned"));
+
+            List<CategoryDefinition> categoryDefinitions = gradingService.getCategoryDefinitions(gradebookUid, gradebookUid);
+            if (categoryDefinitions != null) {
+                for (CategoryDefinition c : categoryDefinitions) {
+                    catTable.put(c.getId(), c.getName());
+                }
+            }
         }
         return catTable;
     }
